2005-03-16  John W. Eaton  <jwe@octave.org>

	* DLD-FUNCTIONS/gplot.l (Fset, Fshow): Delete.
	(F__gnuplot_plot__): Rename from Fgplot.
	(F__gnuplot_splot__): Rename from Fgsplot.
	(F__gnuplot_raw__): Rename from Fgraw.
	(F__gnuplot_set__): Rename from Fgset.
	(F__gnuplot_show__): Rename from Fgshow.
	(F__gnuplot_replot__): Rename from Freplot.
	(WARN_DEPRECATED, DEPRECATED_BODY): New macros.
	(Fgplot, Fgsplot, Fgraw, Fgset, Fgshow): New functions.

2005-03-15  John W. Eaton  <jwe@octave.org>

	* lex.l (<COMMAND_START>{NL}): Reset lexer_flags.doing_rawcommand
	state here.

	* version.h (OCTAVE_API_VERSION): Now 2.9.0.
	(OCTAVE_API_VERSION): Now api-v14.

	* Makefile.in (INCLUDES): Delete sparse-ops.h from the list.

	* cellfun.cc: New function from Octave-forge.  Adapt to Octave
	coding standards.
	* Makefile.in (DLD_XSRC): Add it to the list.

2005-03-14  John W. Eaton  <jwe@octave.org>

	* DLD-FUNCTIONS/dispatch.cc (Fbuiltin):	Avoid crash if symbol
	lookup fails.

2005-03-10  John W. Eaton  <jwe@octave.org>

	* toplev.cc (Foctave_config_info): Print error instead of crashing
	if struct does not contain field we are looking for.

2005-03-09  John W. Eaton  <jwe@octave.org>

	* load-save.cc (Fload, Fsave): Accept -text as an alias for -ascii.
	Issue warning for future change in meaning of -ascii.

	* Makefile.in (bin-dist): Delete target.
	(BINDISTFILES, BINDISTLIBS): Delete variables.

2005-03-04  John W. Eaton  <jwe@octave.org>

	* octave.cc (octave_main): Concatenate all --eval arguments.

2005-03-03  John W. Eaton  <jwe@octave.org>

	* input.cc (input_from_command_line_file): Move definition here.
	* parse.y: From here.
	* input.h (input_from_command_line_file): Move decl here.
	* parse.h: From here.

	* input.cc (octave_gets):
	Don't save history if input is from command line file.

	* parse.y (parse_and_execute, parse_fcn_file, eval_string):
	Don't alter value of input_from_command_line_file here.
	(input_from_command_line_file): Default value is false.